Added new pan_titer field.

--- a/src/constants/fields/deviceserologytest.yaml
+++ b/src/constants/fields/deviceserologytest.yaml
@@ -106,6 +106,12 @@ properties:
     is_exact: false
     possible_values:
     type: integer
+  pan_titer:
+    description: "The CDC spike titer for Pan-Ig in the sample."
+    format:
+    is_exact: false
+    possible_values:
+    type: integer
   igm_truth:
     description: "The true qualitative IgM result."
     format:
