FDA-88 Trigger build for feature branches.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ script:
 notifications:
   email: false
 
-deploy:
-  provider: script
-  script: npm run build
-  on:
-    branch: feature/FDA-88
+branches:
+  only:
+    - master
+    - /^feature.*$/
