--- a/src/pages/about/updates/2014_08_08_openfda_provides_ready_access_to_recall_data/_meta.yaml
+++ b/src/pages/about/updates/2014_08_08_openfda_provides_ready_access_to_recall_data/_meta.yaml
@@ -1,6 +1,6 @@
-documentTitle: "openFDA › About › Updates › OpenFDA provides ready access to recall data"
-label: "OpenFDA provides ready access to recall data"
-title: "OpenFDA provides ready access to recall data"
+documentTitle: "openFDA › About › Updates › openFDA provides ready access to recall data"
+label: "openFDA provides ready access to recall data"
+title: "openFDA provides ready access to recall data"
 path: /about/updates/2014_08_08_openfda_provides_ready_access_to_recall_data/
 date: 2014-08-08
 authors: ["Taha Kass-Hout, MD, MS"]
