--- a/src/pages/about/updates/2015_08_06_new_release_coming_soon/_meta.yaml
+++ b/src/pages/about/updates/2015_08_06_new_release_coming_soon/_meta.yaml
@@ -3,5 +3,5 @@ label: "Mark your calendars: A new release coming soon from openFDA"
 title: "Mark your calendars: A new release coming soon from openFDA"
 path: /about/updates/2015_08_06_new_release_coming_soon/
 date: 2015-08-06
-authors: ["OpenFDA Team"]
+authors: ["openFDA Team"]
 type: update
