--- a/src/pages/about/updates/2015_08_31_medical_device/_meta.yaml
+++ b/src/pages/about/updates/2015_08_31_medical_device/_meta.yaml
@@ -1,6 +1,6 @@
-documentTitle: openFDA › About › Updates › OpenFDA Unveils Cache of Medical Device Data
-label: OpenFDA Unveils Cache of Medical Device Data
-title: OpenFDA Unveils Cache of Medical Device Data
+documentTitle: openFDA › About › Updates › openFDA Unveils Cache of Medical Device Data
+label: openFDA Unveils Cache of Medical Device Data
+title: openFDA Unveils Cache of Medical Device Data
 path: /about/updates/2015_08_31_medical_device/
 date: 2015-08-31
 authors: ["Taha Kass-Hout, MD, MS", "Roselie A. Bright, ScD, MS", "Ann Ferriter"]
