--- a/src/pages/about/updates/2018_04_20_udi_dataset_updated/_meta.yaml
+++ b/src/pages/about/updates/2018_04_20_udi_dataset_updated/_meta.yaml
@@ -3,5 +3,5 @@ label: UDI Dataset Updated
 title: UDI Dataset Updated
 path: /update/
 date: 2017-08-30
-authors: ["OpenFDA Team"]
+authors: ["openFDA Team"]
 type: update
