--- a/src/pages/about/updates/2018_06_22_new_look_same_great_api/_meta.yaml
+++ b/src/pages/about/updates/2018_06_22_new_look_same_great_api/_meta.yaml
@@ -3,5 +3,5 @@ label: "New look, same great API"
 title: "New look, same great API"
 path: /about/updates/2018_06_22_new_look_same_great_api/
 date: 2018-06-22
-authors: ["OpenFDA Team"]
+authors: ["openFDA Team"]
 type: update
