--- a/src/pages/about/updates/2015_05_11_an_open_challenge_to_tap_public_data/_meta.yaml
+++ b/src/pages/about/updates/2015_05_11_an_open_challenge_to_tap_public_data/_meta.yaml
@@ -1,6 +1,6 @@
-documentTitle: "openFDA › About › Updates › Announcing the OpenFDA Developer Challenge - An open call to tap public data and improve public health"
-label: "Announcing the OpenFDA Developer Challenge - An open call to tap public data and improve public health"
-title: "Announcing the OpenFDA Developer Challenge - An open call to tap public data and improve public health"
+documentTitle: "openFDA › About › Updates › Announcing the openFDA Developer Challenge - An open call to tap public data and improve public health"
+label: "Announcing the openFDA Developer Challenge - An open call to tap public data and improve public health"
+title: "Announcing the openFDA Developer Challenge - An open call to tap public data and improve public health"
 path: /about/updates/2015_05_11_an_open_challenge_to_tap_public_data/
 date: 2015-05-11
 authors: ["Taha Kass-Hout, MD, MS"]
