--- a/src/pages/about/updates/2015_07_20_first_year_in_perspective/_meta.yaml
+++ b/src/pages/about/updates/2015_07_20_first_year_in_perspective/_meta.yaml
@@ -1,6 +1,6 @@
-documentTitle: "openFDA › About › Updates › OpenFDA: The First Year in Perspective"
-label: "OpenFDA: The First Year in Perspective"
-title: "OpenFDA: The First Year in Perspective"
+documentTitle: "openFDA › About › Updates › openFDA: The First Year in Perspective"
+label: "openFDA: The First Year in Perspective"
+title: "openFDA: The First Year in Perspective"
 path: /about/updates/2015_07_20_first_year_in_perspective/
 date: 2015-07-20
 authors: ["Taha Kass-Hout, MD, MS"]
