--- a/src/pages/about/updates/2015_12_23_direct_downloads/_meta.yaml
+++ b/src/pages/about/updates/2015_12_23_direct_downloads/_meta.yaml
@@ -1,7 +1,7 @@
-documentTitle: openFDA › About › Updates › OpenFDA Now Allows Direct Downloads of Data
-label: OpenFDA Now Allows Direct Downloads of Data
-title: OpenFDA Now Allows Direct Downloads of Data
+documentTitle: openFDA › About › Updates › openFDA Now Allows Direct Downloads of Data
+label: openFDA Now Allows Direct Downloads of Data
+title: openFDA Now Allows Direct Downloads of Data
 path: /about/updates/2015_12_23_direct_downloads/
 date: 2015-12-23
-authors: ["OpenFDA Team"]
+authors: ["openFDA Team"]
 type: update
