--- a/src/pages/about/updates/2017_08_30_openfda_limit_increased/_meta.yaml
+++ b/src/pages/about/updates/2017_08_30_openfda_limit_increased/_meta.yaml
@@ -1,7 +1,7 @@
-documentTitle: openFDA › About › Updates › OpenFDA Query Result Limit Increased
-label: OpenFDA Query Result Limit Increased
-title: OpenFDA Query Result Limit Increased
+documentTitle: openFDA › About › Updates › openFDA Query Result Limit Increased
+label: openFDA Query Result Limit Increased
+title: openFDA Query Result Limit Increased
 path: /update/openfda-limit-increased
 date: 2017-08-30
-authors: ["OpenFDA Team"]
+authors: ["openFDA Team"]
 type: update
