--- a/src/pages/about/updates/updates.yaml
+++ b/src/pages/about/updates/updates.yaml
@@ -103,3 +103,7 @@ updates:
     path: /about/statistics/
     date: 2019-12-16
     desc: "The openFDA team is proud to announce that openFDA has now surpassed an astounding milestone: 200 million API calls."
+  - title: Independent Evaluations of COVID-19 Serological Tests Now Available
+    path: /about/updates/2020_06_04_COVID-19_Serological_Testing_Evaluations_Now_Available
+    date: 2020-06-05
+    desc: 'The new dataset "Independent Evaluations of COVID-19 Serological Tests" is available via openFDA.'
