--- a/src/pages/about/_content.yaml
+++ b/src/pages/about/_content.yaml
@@ -11,13 +11,15 @@
 - "## Who made openFDA?"
 - "openFDA is an initiative in the Office of Health Informatics (OHI) at the Food and Drug Administration. The core project team consists of the following individuals, in alphabetical order:"
 - ul:
-  - "Letria Hall"
   - "Denis Krylov*"
-  - "Patrick McConnell*"
   - "Edmond Mulaire*"
-  - "Jack Finch"
-  - "Ramakrishna Gundala"
+  - "Jack Finch*"
+  - "John Giannantonio*"
+  - "Josh Smitherman*"
+  - "Letria Hall"
   - "Lonnie Smith"
+  - "Nag Kuchipudi*"
+  - "Patrick McConnell*"
 
 - "*_Contractor to OHI_"
 - "The team also wishes to thank the following individuals and groups for their contributions to the effort:"
@@ -61,3 +63,4 @@
   - "Zhiheng (Roy) Xu"
   - "Carolyn Yancey"
   - "Kelemework Yimam"
+  - "Ramakrishna Gundala"
