Corrected some links, updated the Harmonization Chart to be up-to-date for Devices, fixed the missing 8th row issue.

--- a/src/constants/fields/master_harmonization.yaml
+++ b/src/constants/fields/master_harmonization.yaml
@@ -1,94 +1,110 @@
 device:
   510k:
-  - regulation_number
-  - fei_number
-  - device_name
-  - device_class
-  - medical_specialty_description
-  - registration_number
+    - regulation_number
+    - fei_number
+    - device_name
+    - device_class
+    - medical_specialty_description
+    - registration_number
   classification:
-  - fei_number
-  - registration_number
-  - k_number
-  - pma_number
+    - fei_number
+    - registration_number
+    - k_number
+    - pma_number
   enforcement: []
-  event: []
+  event:
+    - regulation_number
+    - fei_number
+    - device_name
+    - device_class
+    - medical_specialty_description
+    - registration_number
   pma:
-  - regulation_number
-  - fei_number
-  - device_name
-  - device_class
-  - medical_specialty_description
-  - registration_number
+    - regulation_number
+    - fei_number
+    - device_name
+    - device_class
+    - medical_specialty_description
+    - registration_number
   recall:
-  - regulation_number
-  - fei_number
-  - device_name
-  - k_number
-  - device_class
-  - medical_specialty_description
-  - registration_number
-  - pma_number
-  registrationlisting: []
-  udi: []
+    - regulation_number
+    - fei_number
+    - device_name
+    - k_number
+    - device_class
+    - medical_specialty_description
+    - registration_number
+    - pma_number
+  registrationlisting:
+    - regulation_number
+    - device_name
+    - device_class
+    - medical_specialty_description
+    - k_number
+    - pma_number
+  udi:
+    - regulation_number
+    - device_name
+    - device_class
+    - medical_specialty_description
 drug:
   enforcement:
-  - manufacturer_name
-  - unii
-  - product_type
-  - spl_set_id
-  - route
-  - generic_name
-  - brand_name
-  - product_ndc
-  - substance_name
-  - spl_id
-  - is_original_packager
-  - package_ndc
-  - application_number
-  - upc
-  - rxcui
-  - original_packager_product_ndc
-  - pharm_class_moa
-  - pharm_class_epc
-  - pharm_class_cs
-  - nui
-  - pharm_class_pe
+    - manufacturer_name
+    - unii
+    - product_type
+    - spl_set_id
+    - route
+    - generic_name
+    - brand_name
+    - product_ndc
+    - substance_name
+    - spl_id
+    - is_original_packager
+    - package_ndc
+    - application_number
+    - upc
+    - rxcui
+    - original_packager_product_ndc
+    - pharm_class_moa
+    - pharm_class_epc
+    - pharm_class_cs
+    - nui
+    - pharm_class_pe
   event: []
   label:
-  - manufacturer_name
-  - unii
-  - product_type
-  - spl_set_id
-  - route
-  - generic_name
-  - brand_name
-  - product_ndc
-  - substance_name
-  - spl_id
-  - is_original_packager
-  - package_ndc
-  - upc
-  - original_packager_product_ndc
-  - application_number
-  - rxcui
-  - pharm_class_moa
-  - pharm_class_epc
-  - pharm_class_cs
-  - nui
-  - pharm_class_pe
+    - manufacturer_name
+    - unii
+    - product_type
+    - spl_set_id
+    - route
+    - generic_name
+    - brand_name
+    - product_ndc
+    - substance_name
+    - spl_id
+    - is_original_packager
+    - package_ndc
+    - upc
+    - original_packager_product_ndc
+    - application_number
+    - rxcui
+    - pharm_class_moa
+    - pharm_class_epc
+    - pharm_class_cs
+    - nui
+    - pharm_class_pe
   ndc:
-  - spl_set_id
-  - unii
-  - manufacturer_name
-  - is_original_packager
-  - rxcui
-  - upc
-  - pharm_class_epc
-  - pharm_class_pe
-  - nui
-  - pharm_class_moa
-  - pharm_class_cs
+    - spl_set_id
+    - unii
+    - manufacturer_name
+    - is_original_packager
+    - rxcui
+    - upc
+    - pharm_class_epc
+    - pharm_class_pe
+    - nui
+    - pharm_class_moa
+    - pharm_class_cs
 food:
   enforcement: []
   event: []
