--- a/src/pages/apis/_fields.yaml
+++ b/src/pages/apis/_fields.yaml
@@ -36,14 +36,14 @@ properties:
             is_exact: false
             type: number
             pattern:
-            description: "Offset (page) of results, defined by the `skip` [query parameter](/apis/)."
+            description: "Offset (page) of results, defined by the `skip` [query parameter](/apis/query-parameters/)."
             possible_values:
           limit:
             format: int64
             is_exact: false
             type: number
             pattern:
-            description: "Number of records in this return, defined by the `limit` [query parameter](/apis/). If there is no `limit` parameter, the API returns one result."
+            description: "Number of records in this return, defined by the `limit` [query parameter](/apis/query-parameters/). If there is no `limit` parameter, the API returns one result."
             possible_values:
           total:
             format: int64
