--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -394,3 +394,27 @@
           link: /apis/other/substance/download/
         - title: Searchable fields
           link: /apis/other/substance/searchable-fields/
+
+- title: Tobacco API Endpoints
+  id: tobacco-api-endpoints
+  link: /tobacco/
+  collapse: true
+  items:
+    - title: Adverse Events
+      id: tobacco-adverse-events
+      collapse: true
+      items:
+        - title: Overview
+          link: /apis/tobacco/event/
+        - title: How to use the API
+          link: /apis/tobacco/event/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/tobacco/event/example-api-queries/
+        - title: Explore the API with an interactive chart
+          link: /apis/tobacco/event/explore-the-api-with-an-interactive-chart/
+        - title: Understanding the API Results
+          link: /apis/tobacco/event/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/tobacco/event/download/
+        - title: Searchable fields
+          link: /apis/tobacco/event/searchable-fields
