--- a/src/pages/apis/tobacco/event/_meta.yaml
+++ b/src/pages/apis/tobacco/event/_meta.yaml
@@ -2,7 +2,7 @@ documentTitle: openFDA › Tobacco › Adverse Events API
 name: Tobacco Adverse Events
 description: "Reports about tobacco products that are damaged, defective, contaminated, smell or taste wrong, or cause undesirable health effects."
 datasets:
-  - TOBACCO
+  - tobaccoevent
 label: Tobacco Adverse Events
 title: Tobacco Adverse Events
 path: /apis/tobacco/event
